--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-
+<div class="main">
 <div class="blogSubmit">
  <form action="/blog" method="post">
     <input type="text" name="title" placeholder="Title" style="margin-bottom: 40px; width: 25vw;" >
@@ -8,11 +8,13 @@
      <button type="submit" class="btn btn-primary">Submit</button>
  </form>
 </div>
+</div>
 
 <% blogs.forEach(function(blog){ %>
     <div class="blog">
         <h1><%= blog.title%></h1>
-        <p><%=blog.content.substring(0,100)%><a href="/blog/<%=blog._id%>">Read More</a></p>
+        <hr class="rule">
+        <p><%=blog.content.substring(0,100)%>...<a href="/blog/<%=blog._id%>">Read More</a></p>
     </div>
 <% }); %>
 
