--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,9 +2,9 @@
 <div class="login">
 <form action="/login" method="post">
     <label for="login">Username</label>
-    <input id="login" type="email" name="username">
+    <input id="login" type="email" name="username" style="margin-bottom: 30px;">
     <label for="pass">Password</label>
-    <input id="pass" type="password" name="pass">
+    <input id="pass" type="password" name="pass" style="margin-bottom: 30px;">
     <button class="btn btn-primary" type="submit">Login</button>
     
 <a href="/signup">Don't have an account?SignUp</a>
