--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,9 +23,11 @@
         <div class="navbar">
             <img src="logo.png"></img>
             <div class="links">
+                <a href="/home">Home</a>
                 <a href="/video">For You</a>
                 <a href="/blog">Blog</a>
                 <a href="/guides">Guides</a>
+                <a href="/logout">LogOut</a>
             </div>
         </div>
 
