--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="containerLogin">    
 <div class="login">
 <form action="/login" method="post">
     <label for="login">Username</label>
@@ -32,6 +32,7 @@
 <a href="/signup">Don't have an account?SignUp</a>
 </form>
 
+</div>
 </div>
 
 <%- include("partials/footer") -%>
