--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="containerSign"> 
 <div class="signup">
 <form action="/signup" method="post">
     <label for="signup">Username</label>
@@ -31,5 +31,6 @@
     <a href="/">Already have an account?SignIn</a>
 </form>
 </div>
+</div> 
 
 <%- include("partials/footer") -%>
